# sentic-aggregator

./: .gitignore  README.md  pyproject.toml
deploy/chart/: Chart.yaml  values.yaml
deploy/chart/templates/: _helpers.tpl  deployment.yaml
src/sentic_aggregator/: __init__.py  main.py
tests/unit/: test_smoke.py
